--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Lewis & Daniella</title>
 <link rel="stylesheet" href="style.css">
 
+<!-- PWA & Icons -->
 <link rel="manifest" href="manifest.json">
 <link rel="icon" href="icon.png" type="image/png">
 <link rel="apple-touch-icon" href="icon.png">
@@ -33,7 +34,7 @@
     <p> Private Friendship App </p>
   </div>
 
-  <!-- MEMORIES -->
+  <!-- MEMORIES (Photo/Video Upload) -->
   <div id="memories" class="screen">
     <h2> Memories</h2>
     <input type="file" id="fileInput" accept="image/*,video/*" multiple>
@@ -60,7 +61,7 @@
     <button onclick="show('note')"></button>
   </div>
 
-  <!-- BALLOONS & FLOWERS -->
+  <!-- FLOATING BALLOONS & FLOWERS -->
   <div class="animations"></div>
 
 </div>
