--- a/index.html
+++ b/index.html
@@ -3,14 +3,56 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Lewis & Daniella</title>
-<link rel="stylesheet" href="style.css">
+<title>Lewis & Daniella Friendship App</title>
 
-<!-- PWA & Icons -->
+<!-- Styles -->
+<style>
+body { margin:0; font-family:sans-serif; background:#e6d6ff; }
+
+.screen { display:none; padding:20px; }
+.screen.active { display:block; }
+
+h1,h2 { color:#6b1fa0; }
+
+.mem-image { width:120px; margin:5px; border-radius:8px; }
+.mem-video { width:200px; margin:5px; border-radius:8px; }
+
+.animations {
+  position:fixed; bottom:0; left:0;
+  width:100%; height:100%;
+  pointer-events:none;
+}
+.float {
+  position:absolute;
+  bottom:0;
+  font-size:2rem;
+  animation-name:floatup;
+  animation-timing-function:linear;
+}
+@keyframes floatup {
+  0% { transform: translateY(0); opacity:1; }
+  100% { transform: translateY(-100vh); opacity:0; }
+}
+
+.nav {
+  position:fixed;
+  bottom:0; width:100%;
+  background:#9c6aff;
+  display:flex; justify-content:space-around;
+  padding:10px;
+}
+.nav button { font-size:1.5rem; background:none; border:none; color:white; }
+.message { font-size:1.1rem; color:#4b0082; }
+input, button { padding:8px; font-size:1rem; margin-top:10px; border-radius:5px; border:1px solid #6b1fa0; }
+button { background:#9c6aff; color:white; cursor:pointer; }
+</style>
+
+<!-- Manifest & Icon -->
 <link rel="manifest" href="manifest.json">
 <link rel="icon" href="icon.png" type="image/png">
 <link rel="apple-touch-icon" href="icon.png">
 <meta name="theme-color" content="#9c6aff">
+
 </head>
 <body>
 
@@ -30,11 +72,11 @@
 
   <!-- HOME SCREEN -->
   <div id="home" class="screen">
-    <h1>Lewis & Daniella</h1>
-    <p> Private Friendship App </p>
+    <h1>Welcome Lewis & Daniella</h1>
+    <p> Our Private Friendship App </p>
   </div>
 
-  <!-- MEMORIES (Photo/Video Upload) -->
+  <!-- MEMORIES -->
   <div id="memories" class="screen">
     <h2> Memories</h2>
     <input type="file" id="fileInput" accept="image/*,video/*" multiple>
@@ -43,13 +85,13 @@
 
   <!-- SWEET WORDS -->
   <div id="note" class="screen">
-    <h2> A Sweet Message</h2>
+    <h2> A Special Message</h2>
     <div class="message">
       Daniella,<br><br>
-      I just want you to know how much I love and appreciate you as a friend. <br>
-      Thank you for always being there, listening, and making my life brighter.<br>
-      You’ve healed me in ways I can’t explain. <br>
-      I can’t imagine life without our friendship. You are the best friend I could ever ask for.<br><br>
+      You are the most amazing friend I could ever ask for. <br>
+      Thank you for always being there for me, listening, and bringing joy to my life.<br>
+      I treasure every moment we share. <br>
+      I can’t imagine life without our friendship. You truly make my days brighter.<br><br>
       — <strong>Lewis</strong>
     </div>
   </div>
@@ -66,6 +108,68 @@
 
 </div>
 
-<script src="script.js"></script>
+<!-- Scripts -->
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+
+  // ===== LOCK SCREEN =====
+  function unlock() {
+    const password = document.getElementById("password").value;
+    if(password === "1234") { // unlock code
+      document.getElementById("lock").classList.remove("active");
+      document.getElementById("home").classList.add("active");
+      document.getElementById("bgMusic").play();
+    } else {
+      alert("Wrong code!");
+    }
+  }
+  window.unlock = unlock;
+
+  // ===== NAVIGATION =====
+  function show(screenId) {
+    document.querySelectorAll(".screen").forEach(s => s.classList.remove("active"));
+    document.getElementById(screenId).classList.add("active");
+  }
+  window.show = show;
+
+  // ===== UPLOAD PHOTOS & VIDEOS =====
+  const fileInput = document.getElementById("fileInput");
+  const gallery = document.getElementById("gallery");
+
+  fileInput.addEventListener("change", (e) => {
+    gallery.innerHTML = ""; // clear previous
+    Array.from(e.target.files).forEach(file => {
+      const url = URL.createObjectURL(file);
+      if(file.type.startsWith("image/")) {
+        const img = document.createElement("img");
+        img.src = url;
+        img.className = "mem-image";
+        gallery.appendChild(img);
+      } else if(file.type.startsWith("video/")) {
+        const video = document.createElement("video");
+        video.src = url;
+        video.controls = true;
+        video.className = "mem-video";
+        gallery.appendChild(video);
+      }
+    });
+  });
+
+  // ===== FLOATING BALLOONS & FLOWERS =====
+  const animations = document.querySelector(".animations");
+  function createFloat() {
+    const elem = document.createElement("div");
+    elem.className = "float";
+    elem.style.left = Math.random() * 100 + "vw";
+    elem.style.animationDuration = (4 + Math.random() * 4) + "s";
+    elem.innerText = Math.random() > 0.5 ? "" : "";
+    animations.appendChild(elem);
+    setTimeout(() => animations.removeChild(elem), 8000);
+  }
+  setInterval(createFloat, 800);
+
+});
+</script>
+
 </body>
 </html>
